// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SSE > makeEventSchema() > should make a valid schema of SSE event 1`] = `
{
  "$schema": "https://json-schema.org/draft-2020-12/schema",
  "properties": {
    "data": {
      "type": "string",
    },
    "event": {
      "const": "test",
    },
    "id": {
      "type": "string",
    },
    "retry": {
      "exclusiveMinimum": 0,
      "maximum": 9007199254740991,
      "type": "integer",
    },
  },
  "required": [
    "data",
    "event",
  ],
  "type": "object",
}
`;

exports[`SSE > makeResultHandler() > should create ResultHandler describing possible events and handling generic errors 0 1`] = `
[
  {
    "mimeTypes": [
      "text/event-stream",
    ],
    "schema": {
      "$schema": "https://json-schema.org/draft-2020-12/schema",
      "anyOf": [
        {
          "properties": {
            "data": {
              "type": "string",
            },
            "event": {
              "const": "test",
            },
            "id": {
              "type": "string",
            },
            "retry": {
              "exclusiveMinimum": 0,
              "maximum": 9007199254740991,
              "type": "integer",
            },
          },
          "required": [
            "data",
            "event",
          ],
          "type": "object",
        },
        {
          "properties": {
            "data": {
              "type": "number",
            },
            "event": {
              "const": "another",
            },
            "id": {
              "type": "string",
            },
            "retry": {
              "exclusiveMinimum": 0,
              "maximum": 9007199254740991,
              "type": "integer",
            },
          },
          "required": [
            "data",
            "event",
          ],
          "type": "object",
        },
      ],
    },
    "statusCodes": [
      200,
    ],
  },
]
`;

exports[`SSE > makeResultHandler() > should create ResultHandler describing possible events and handling generic errors 0 2`] = `
[
  {
    "mimeTypes": [
      "text/plain",
    ],
    "schema": {
      "$schema": "https://json-schema.org/draft-2020-12/schema",
      "type": "string",
    },
    "statusCodes": [
      400,
    ],
  },
]
`;

exports[`SSE > makeResultHandler() > should create ResultHandler describing possible events and handling generic errors 1 1`] = `
[
  {
    "mimeTypes": [
      "text/event-stream",
    ],
    "schema": {
      "$schema": "https://json-schema.org/draft-2020-12/schema",
      "properties": {
        "data": {
          "type": "string",
        },
        "event": {
          "const": "single",
        },
        "id": {
          "type": "string",
        },
        "retry": {
          "exclusiveMinimum": 0,
          "maximum": 9007199254740991,
          "type": "integer",
        },
      },
      "required": [
        "data",
        "event",
      ],
      "type": "object",
    },
    "statusCodes": [
      200,
    ],
  },
]
`;

exports[`SSE > makeResultHandler() > should create ResultHandler describing possible events and handling generic errors 1 2`] = `
[
  {
    "mimeTypes": [
      "text/plain",
    ],
    "schema": {
      "$schema": "https://json-schema.org/draft-2020-12/schema",
      "type": "string",
    },
    "statusCodes": [
      400,
    ],
  },
]
`;
